<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorPrimary">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/registrationToolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:padding="16dp"
        android:id="@+id/registrationFirstNameField"
        android:background="#4bffffff"
        android:hint="@string/registration_first_name"
        android:textColorHint="#71ffffff"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/registrationLastNameField"
        android:padding="16dp"
        android:background="#4bffffff"
        android:hint="@string/registration_last_name"
        android:textColorHint="#71ffffff"
        android:layout_marginTop="2dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/registrationUsernameField"
        android:padding="16dp"
        android:background="#4bffffff"
        android:hint="@string/registration_username"
        android:textColorHint="#71ffffff"
        android:layout_marginTop="2dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/registrationEmailField"
        android:padding="16dp"
        android:background="#4bffffff"
        android:hint="@string/registration_email"
        android:textColorHint="#71ffffff"
        android:layout_marginTop="2dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/registrationPasswordField"
        android:padding="16dp"
        android:background="#4bffffff"
        android:hint="@string/registration_password"
        android:textColorHint="#71ffffff"
        android:layout_marginTop="2dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/registrationPasswordConfirmField"
        android:padding="16dp"
        android:background="#4bffffff"
        android:hint="@string/registration_password_confirm"
        android:textColorHint="#71ffffff"
        android:layout_marginTop="2dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_submit"
        android:textSize="18sp"
        android:id="@+id/registrationSubmitButton"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="8sp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/colorPrimaryExtraDark"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

</LinearLayout>