<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/passwordUpdateToolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/updateCurrentPasswordField"
        android:padding="16sp"
        android:background="#4bffffff"
        android:hint="@string/update_current_password"
        android:textColorHint="#71ffffff"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/updatePasswordField"
        android:padding="16sp"
        android:background="#4bffffff"
        android:hint="@string/update_password"
        android:textColorHint="#71ffffff"
        android:layout_marginTop="2sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/updatePasswordConfirmationField"
        android:padding="16sp"
        android:background="#4bffffff"
        android:hint="@string/update_password_confirmation"
        android:textColorHint="#71ffffff"
        android:layout_marginTop="2sp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_update_submit"
        android:textSize="18sp"
        android:id="@+id/passwordUpdateSubmitButton"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="8sp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/colorPrimaryExtraDark"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

</LinearLayout>